Remove default fallbacks and enforce DB-only content loading

--- a/admin.html
+++ b/admin.html
@@ -15,26 +15,26 @@
       http-equiv="Permissions-Policy"
       content="camera=(), microphone=(), geolocation=()"
     />
-    <link rel="icon" type="image/svg+xml" href="/portfolio/brand-icon.svg?v=20260215v19" />
+    <link rel="icon" type="image/svg+xml" href="/portfolio/brand-icon.svg?v=20260215v20" />
     <link
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="/portfolio/brand-icon-32.png?v=20260215v19"
+      href="/portfolio/brand-icon-32.png?v=20260215v20"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="16x16"
-      href="/portfolio/brand-icon-16.png?v=20260215v19"
+      href="/portfolio/brand-icon-16.png?v=20260215v20"
     />
     <link
       rel="apple-touch-icon"
       sizes="180x180"
-      href="/portfolio/brand-icon-180.png?v=20260215v19"
+      href="/portfolio/brand-icon-180.png?v=20260215v20"
     />
-    <link rel="manifest" href="/portfolio/site.webmanifest?v=20260215v19" />
-    <link rel="stylesheet" href="/portfolio/admin.css?v=20260215v19" />
+    <link rel="manifest" href="/portfolio/site.webmanifest?v=20260215v20" />
+    <link rel="stylesheet" href="/portfolio/admin.css?v=20260215v20" />
   </head>
   <body>
     <main class="admin-shell">
@@ -350,7 +350,7 @@
               Reload from Database
             </button>
             <button id="resetBtn" class="btn btn-secondary" type="button">
-              Reset to Defaults
+              Clear Editor
             </button>
             <button id="saveBtn" class="btn btn-primary" type="button">
               Save Changes
@@ -364,6 +364,6 @@
       </p>
     </main>
 
-    <script type="module" src="/portfolio/admin.js?v=20260215v19"></script>
+    <script type="module" src="/portfolio/admin.js?v=20260215v20"></script>
   </body>
 </html>
