Add navbar logo before brand name using brand-icon-32

--- a/index.html
+++ b/index.html
@@ -20,33 +20,42 @@
       content="Portfolio website for Adarsh Malayath, full stack developer with banking technology experience in Java, PL/SQL, ReactJS, and production systems."
     />
     <link rel="canonical" href="https://adarshmalayath.github.io/portfolio" />
-    <link rel="icon" type="image/svg+xml" href="/portfolio/brand-icon.svg?v=20260215v20" />
+    <link rel="icon" type="image/svg+xml" href="/portfolio/brand-icon.svg?v=20260215v22" />
     <link
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="/portfolio/brand-icon-32.png?v=20260215v20"
+      href="/portfolio/brand-icon-32.png?v=20260215v22"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="16x16"
-      href="/portfolio/brand-icon-16.png?v=20260215v20"
+      href="/portfolio/brand-icon-16.png?v=20260215v22"
     />
     <link
       rel="apple-touch-icon"
       sizes="180x180"
-      href="/portfolio/brand-icon-180.png?v=20260215v20"
+      href="/portfolio/brand-icon-180.png?v=20260215v22"
     />
-    <link rel="manifest" href="/portfolio/site.webmanifest?v=20260215v20" />
-    <link rel="stylesheet" href="/portfolio/styles.css?v=20260215v20" />
+    <link rel="manifest" href="/portfolio/site.webmanifest?v=20260215v22" />
+    <link rel="stylesheet" href="/portfolio/styles.css?v=20260215v22" />
   </head>
   <body>
     <div class="bg-orb orb-a" aria-hidden="true"></div>
     <div class="bg-orb orb-b" aria-hidden="true"></div>
 
 	    <header class="site-header reveal">
-	      <a class="brand" href="#top" id="brandName">Adarsh Malayath</a>
+	      <a class="brand" href="#top">
+	        <img
+	          class="brand-logo"
+	          src="/portfolio/brand-icon-32.png?v=20260215v22"
+	          alt="Brand logo"
+	          width="24"
+	          height="24"
+	        />
+	        <span id="brandName">Adarsh Malayath</span>
+	      </a>
 	      <nav class="site-nav">
 	        <a href="#experience" id="navExperience">Experience</a>
 	        <a href="#skills" id="navSkills">Skills</a>
@@ -282,7 +291,7 @@
       <p>© 2026 <span id="footerName">Adarsh Malayath</span></p>
     </footer>
 
-    <script src="/portfolio/script.js?v=20260215v21"></script>
-    <script type="module" src="/portfolio/portfolio-data.js?v=20260215v21"></script>
+    <script src="/portfolio/script.js?v=20260215v22"></script>
+    <script type="module" src="/portfolio/portfolio-data.js?v=20260215v22"></script>
   </body>
 </html>
