Improve education spacing and add school-level education entries

--- a/admin.html
+++ b/admin.html
@@ -248,7 +248,7 @@
 
 	          <section class="form-section">
 	            <div class="section-header-row">
-	              <h2>Education (2)</h2>
+	              <h2>Education (4)</h2>
 	              <button
 	                class="section-title-toggle btn btn-ghost"
 	                type="button"
@@ -278,6 +278,20 @@
               <input id="education1Meta" type="text" />
               <label for="education1Detail">Education 2 Detail</label>
               <input id="education1Detail" type="text" />
+
+              <label for="education2Title">Education 3 Title</label>
+              <input id="education2Title" type="text" />
+              <label for="education2Meta">Education 3 Meta</label>
+              <input id="education2Meta" type="text" />
+              <label for="education2Detail">Education 3 Detail</label>
+              <input id="education2Detail" type="text" />
+
+              <label for="education3Title">Education 4 Title</label>
+              <input id="education3Title" type="text" />
+              <label for="education3Meta">Education 4 Meta</label>
+              <input id="education3Meta" type="text" />
+              <label for="education3Detail">Education 4 Detail</label>
+              <input id="education3Detail" type="text" />
             </div>
           </section>
 
@@ -364,6 +378,6 @@
       </p>
     </main>
 
-    <script type="module" src="/portfolio/admin.js?v=20260215v20"></script>
+    <script type="module" src="/portfolio/admin.js?v=20260215v21"></script>
   </body>
 </html>
