--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       href="/portfolio/brand-icon-180.png?v=20260215v22"
     />
     <link rel="manifest" href="/portfolio/site.webmanifest?v=20260215v22" />
-    <link rel="stylesheet" href="/portfolio/styles.css?v=20260215v24" />
+    <link rel="stylesheet" href="/portfolio/styles.css?v=20260215v25" />
   </head>
   <body>
     <div class="bg-orb orb-a" aria-hidden="true"></div>
@@ -257,6 +257,22 @@
               </p>
               <p>CGPA: 8.19 / 10</p>
             </article>
+            <article class="card reveal">
+              <h3>Higher Secondary Education (Plus Two)</h3>
+              <p class="meta">
+                Government Higher Secondary School Kuttippuram, India | Jul 2016
+                – Mar 2018
+              </p>
+              <p>Percentage: 85.25%</p>
+            </article>
+            <article class="card reveal">
+              <h3>Secondary Education (10th)</h3>
+              <p class="meta">
+                Technical Higher Secondary School Vattamkulam, India | Jun 2015 –
+                Mar 2016
+              </p>
+              <p>Percentage: 95%</p>
+            </article>
           </div>
         </div>
 	        <div>
@@ -291,7 +307,7 @@
       <p>© 2026 <span id="footerName">Adarsh Malayath</span></p>
     </footer>
 
-    <script src="/portfolio/script.js?v=20260215v22"></script>
-    <script type="module" src="/portfolio/portfolio-data.js?v=20260215v22"></script>
+    <script src="/portfolio/script.js?v=20260215v23"></script>
+    <script type="module" src="/portfolio/portfolio-data.js?v=20260215v23"></script>
   </body>
 </html>
