Render skills as icon-based list items

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       href="/portfolio/brand-icon-180.png?v=20260215v22"
     />
     <link rel="manifest" href="/portfolio/site.webmanifest?v=20260215v22" />
-    <link rel="stylesheet" href="/portfolio/styles.css?v=20260215v25" />
+    <link rel="stylesheet" href="/portfolio/styles.css?v=20260216v26" />
   </head>
   <body>
     <div class="bg-orb orb-a" aria-hidden="true"></div>
@@ -173,32 +173,130 @@
         </article>
       </section>
 
-	      <section id="skills" class="section reveal">
-	        <h2 id="skillsHeading">Technical Skills</h2>
+      <section id="skills" class="section reveal">
+        <h2 id="skillsHeading">Technical Skills</h2>
         <div class="grid" id="skillsGrid">
           <article class="card reveal">
             <h3>Languages</h3>
-            <p>Java, JavaScript, Python, PL/SQL</p>
+            <ul class="skill-list">
+              <li class="skill-list-item">
+                <img class="skill-item-icon" src="/portfolio/skill-icons/java.svg" alt="Java logo" width="16" height="16" loading="lazy" />
+                <span>Java</span>
+              </li>
+              <li class="skill-list-item">
+                <img class="skill-item-icon" src="/portfolio/skill-icons/javascript.svg" alt="JavaScript logo" width="16" height="16" loading="lazy" />
+                <span>JavaScript</span>
+              </li>
+              <li class="skill-list-item">
+                <img class="skill-item-icon" src="/portfolio/skill-icons/python.svg" alt="Python logo" width="16" height="16" loading="lazy" />
+                <span>Python</span>
+              </li>
+              <li class="skill-list-item">
+                <img class="skill-item-icon" src="/portfolio/skill-icons/plsql.svg" alt="PL/SQL logo" width="16" height="16" loading="lazy" />
+                <span>PL/SQL</span>
+              </li>
+            </ul>
           </article>
           <article class="card reveal">
-            <h3>Web & UI</h3>
-            <p>ReactJS, HTML5, CSS3, Bootstrap</p>
+            <h3>Web &amp; UI</h3>
+            <ul class="skill-list">
+              <li class="skill-list-item">
+                <img class="skill-item-icon" src="/portfolio/skill-icons/react.svg" alt="ReactJS logo" width="16" height="16" loading="lazy" />
+                <span>ReactJS</span>
+              </li>
+              <li class="skill-list-item">
+                <img class="skill-item-icon" src="/portfolio/skill-icons/html5.svg" alt="HTML5 logo" width="16" height="16" loading="lazy" />
+                <span>HTML5</span>
+              </li>
+              <li class="skill-list-item">
+                <img class="skill-item-icon" src="/portfolio/skill-icons/css3.svg" alt="CSS3 logo" width="16" height="16" loading="lazy" />
+                <span>CSS3</span>
+              </li>
+              <li class="skill-list-item">
+                <img class="skill-item-icon" src="/portfolio/skill-icons/bootstrap.svg" alt="Bootstrap logo" width="16" height="16" loading="lazy" />
+                <span>Bootstrap</span>
+              </li>
+            </ul>
           </article>
           <article class="card reveal">
             <h3>Frameworks</h3>
-            <p>Spring, Spring Boot</p>
+            <ul class="skill-list">
+              <li class="skill-list-item">
+                <img class="skill-item-icon" src="/portfolio/skill-icons/spring.svg" alt="Spring logo" width="16" height="16" loading="lazy" />
+                <span>Spring</span>
+              </li>
+              <li class="skill-list-item">
+                <img class="skill-item-icon" src="/portfolio/skill-icons/springboot.svg" alt="Spring Boot logo" width="16" height="16" loading="lazy" />
+                <span>Spring Boot</span>
+              </li>
+            </ul>
           </article>
           <article class="card reveal">
             <h3>Databases</h3>
-            <p>Oracle, SQL Server, MySQL</p>
+            <ul class="skill-list">
+              <li class="skill-list-item">
+                <img class="skill-item-icon" src="/portfolio/skill-icons/oracle.svg" alt="Oracle logo" width="16" height="16" loading="lazy" />
+                <span>Oracle</span>
+              </li>
+              <li class="skill-list-item">
+                <img class="skill-item-icon" src="/portfolio/skill-icons/sqlserver.svg" alt="SQL Server logo" width="16" height="16" loading="lazy" />
+                <span>SQL Server</span>
+              </li>
+              <li class="skill-list-item">
+                <img class="skill-item-icon" src="/portfolio/skill-icons/mysql.svg" alt="MySQL logo" width="16" height="16" loading="lazy" />
+                <span>MySQL</span>
+              </li>
+            </ul>
           </article>
           <article class="card reveal">
             <h3>Tools</h3>
-            <p>Git, IntelliJ IDEA, VS Code, ServiceNow, JIRA, OBDX</p>
+            <ul class="skill-list">
+              <li class="skill-list-item">
+                <img class="skill-item-icon" src="/portfolio/skill-icons/git.svg" alt="Git logo" width="16" height="16" loading="lazy" />
+                <span>Git</span>
+              </li>
+              <li class="skill-list-item">
+                <img class="skill-item-icon" src="/portfolio/skill-icons/intellijidea.svg" alt="IntelliJ IDEA logo" width="16" height="16" loading="lazy" />
+                <span>IntelliJ IDEA</span>
+              </li>
+              <li class="skill-list-item">
+                <img class="skill-item-icon" src="/portfolio/skill-icons/vscode.svg" alt="VS Code logo" width="16" height="16" loading="lazy" />
+                <span>VS Code</span>
+              </li>
+              <li class="skill-list-item">
+                <img class="skill-item-icon" src="/portfolio/skill-icons/servicenow.svg" alt="ServiceNow logo" width="16" height="16" loading="lazy" />
+                <span>ServiceNow</span>
+              </li>
+              <li class="skill-list-item">
+                <img class="skill-item-icon" src="/portfolio/skill-icons/jira.svg" alt="JIRA logo" width="16" height="16" loading="lazy" />
+                <span>JIRA</span>
+              </li>
+              <li class="skill-list-item">
+                <img class="skill-item-icon" src="/portfolio/skill-icons/obdx.svg" alt="OBDX logo" width="16" height="16" loading="lazy" />
+                <span>OBDX</span>
+              </li>
+            </ul>
           </article>
           <article class="card reveal">
             <h3>Domain Focus</h3>
-            <p>Banking Platforms, Fraud Risk, API Integration, Compliance</p>
+            <ul class="skill-list">
+              <li class="skill-list-item">
+                <img class="skill-item-icon" src="/portfolio/skill-icons/banking.svg" alt="Banking Platforms logo" width="16" height="16" loading="lazy" />
+                <span>Banking Platforms</span>
+              </li>
+              <li class="skill-list-item">
+                <img class="skill-item-icon" src="/portfolio/skill-icons/fraud.svg" alt="Fraud Risk logo" width="16" height="16" loading="lazy" />
+                <span>Fraud Risk</span>
+              </li>
+              <li class="skill-list-item">
+                <img class="skill-item-icon" src="/portfolio/skill-icons/api.svg" alt="API Integration logo" width="16" height="16" loading="lazy" />
+                <span>API Integration</span>
+              </li>
+              <li class="skill-list-item">
+                <img class="skill-item-icon" src="/portfolio/skill-icons/compliance.svg" alt="Compliance logo" width="16" height="16" loading="lazy" />
+                <span>Compliance</span>
+              </li>
+            </ul>
           </article>
         </div>
       </section>
@@ -308,6 +406,6 @@
     </footer>
 
     <script src="/portfolio/script.js?v=20260215v23"></script>
-    <script type="module" src="/portfolio/portfolio-data.js?v=20260215v23"></script>
+    <script type="module" src="/portfolio/portfolio-data.js?v=20260216v24"></script>
   </body>
 </html>
