--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       href="/portfolio/brand-icon-180.png?v=20260215v22"
     />
     <link rel="manifest" href="/portfolio/site.webmanifest?v=20260215v22" />
-    <link rel="stylesheet" href="/portfolio/styles.css?v=20260216v28" />
+    <link rel="stylesheet" href="/portfolio/styles.css?v=20260216v29" />
   </head>
   <body>
     <div class="bg-orb orb-a" aria-hidden="true"></div>
@@ -523,13 +523,23 @@
         </div>
 	        <div>
 	          <h2 id="certificationsHeading">Certification Highlights</h2>
-          <article class="card reveal" id="certificationsCard">
-            <p>Discrete Mathematics — NPTEL, IIT Madras</p>
-            <p>Java Full Stack Developer — NIIT, Chennai</p>
-            <p>Introduction to Analytics & Excel — Coding Ninjas</p>
-            <p>Data Visualization with Power BI — Coding Ninjas</p>
-            <p>SQL for Data Analysis — Coding Ninjas</p>
-          </article>
+          <div id="certificationsGrid">
+            <article class="card certification-card reveal">
+              <p>Discrete Mathematics — NPTEL, IIT Madras</p>
+            </article>
+            <article class="card certification-card reveal">
+              <p>Java Full Stack Developer — NIIT, Chennai</p>
+            </article>
+            <article class="card certification-card reveal">
+              <p>Introduction to Analytics & Excel — Coding Ninjas</p>
+            </article>
+            <article class="card certification-card reveal">
+              <p>Data Visualization with Power BI — Coding Ninjas</p>
+            </article>
+            <article class="card certification-card reveal">
+              <p>SQL for Data Analysis — Coding Ninjas</p>
+            </article>
+          </div>
         </div>
       </section>
 
@@ -554,6 +564,6 @@
     </footer>
 
     <script src="/portfolio/script.js?v=20260216v25"></script>
-    <script type="module" src="/portfolio/portfolio-data.js?v=20260216v25"></script>
+    <script type="module" src="/portfolio/portfolio-data.js?v=20260216v26"></script>
   </body>
 </html>
