Add keyboard and mouse to hero visual

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       href="/portfolio/brand-icon-180.png?v=20260215v22"
     />
     <link rel="manifest" href="/portfolio/site.webmanifest?v=20260215v22" />
-    <link rel="stylesheet" href="/portfolio/styles.css?v=20260216v29" />
+    <link rel="stylesheet" href="/portfolio/styles.css?v=20260216v30" />
   </head>
   <body>
     <div class="bg-orb orb-a" aria-hidden="true"></div>
@@ -146,7 +146,7 @@
                 </linearGradient>
               </defs>
 
-              <ellipse class="desk-glow" cx="320" cy="460" rx="235" ry="36" />
+	              <ellipse class="desk-glow" cx="350" cy="482" rx="295" ry="42" />
 
               <rect
                 class="monitor-shell"
@@ -217,18 +217,45 @@
                 stroke="#f2c84b"
                 stroke-opacity="0.4"
               />
-              <rect
-                class="monitor-base"
-                x="214"
-                y="410"
-                width="190"
+	              <rect
+	                class="monitor-base"
+	                x="214"
+	                y="410"
+	                width="190"
                 height="24"
                 rx="12"
                 fill="#0f1113"
-                stroke="#f2c84b"
-                stroke-opacity="0.42"
-              />
-            </svg>
+	                stroke="#f2c84b"
+	                stroke-opacity="0.42"
+	              />
+
+	              <g class="keyboard-group">
+	                <rect class="keyboard-shadow" x="156" y="456" width="324" height="52" rx="18" />
+	                <rect class="keyboard-body" x="162" y="448" width="312" height="48" rx="16" />
+	                <rect class="keyboard-key key-soft" x="184" y="462" width="24" height="8" rx="4" />
+	                <rect class="keyboard-key key-soft" x="214" y="462" width="24" height="8" rx="4" />
+	                <rect class="keyboard-key key-soft" x="244" y="462" width="24" height="8" rx="4" />
+	                <rect class="keyboard-key key-soft" x="274" y="462" width="24" height="8" rx="4" />
+	                <rect class="keyboard-key key-primary" x="304" y="462" width="34" height="8" rx="4" />
+	                <rect class="keyboard-key key-soft" x="344" y="462" width="24" height="8" rx="4" />
+	                <rect class="keyboard-key key-soft" x="374" y="462" width="24" height="8" rx="4" />
+	                <rect class="keyboard-key key-soft" x="404" y="462" width="24" height="8" rx="4" />
+
+	                <rect class="keyboard-key key-soft" x="198" y="476" width="34" height="8" rx="4" />
+	                <rect class="keyboard-key key-soft" x="238" y="476" width="24" height="8" rx="4" />
+	                <rect class="keyboard-key key-soft" x="268" y="476" width="24" height="8" rx="4" />
+	                <rect class="keyboard-key key-primary" x="298" y="476" width="70" height="8" rx="4" />
+	                <rect class="keyboard-key key-soft" x="374" y="476" width="24" height="8" rx="4" />
+	                <rect class="keyboard-key key-soft" x="404" y="476" width="24" height="8" rx="4" />
+	              </g>
+
+	              <g class="mouse-group">
+	                <ellipse class="mouse-shadow" cx="548" cy="490" rx="31" ry="10" />
+	                <rect class="mouse-shell" x="526" y="442" width="44" height="58" rx="22" />
+	                <line class="mouse-line" x1="548" y1="452" x2="548" y2="468" />
+	                <circle class="mouse-wheel" cx="548" cy="461" r="3" />
+	              </g>
+	            </svg>
 
             <div class="hero-ui-chip chip-a">
               <span class="chip-title">Build</span>
