--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       href="/portfolio/brand-icon-180.png?v=20260215v22"
     />
     <link rel="manifest" href="/portfolio/site.webmanifest?v=20260215v22" />
-    <link rel="stylesheet" href="/portfolio/styles.css?v=20260216v33" />
+    <link rel="stylesheet" href="/portfolio/styles.css?v=20260216v34" />
   </head>
   <body data-theme="dark">
     <div class="bg-orb orb-a" aria-hidden="true"></div>
@@ -114,24 +114,21 @@
         />
         <span id="brandName">Adarsh Malayath</span>
       </a>
-      <div class="header-controls">
-        <nav class="site-nav">
-          <a href="#experience" id="navExperience">Experience</a>
-          <a href="#skills" id="navSkills">Skills</a>
-          <a href="#projects" id="navProjects">Projects</a>
-          <a href="#education" id="navEducation">Education</a>
-        </nav>
+      <nav class="site-nav">
+        <a href="#experience" id="navExperience">Experience</a>
+        <a href="#skills" id="navSkills">Skills</a>
+        <a href="#projects" id="navProjects">Projects</a>
+        <a href="#education" id="navEducation">Education</a>
         <button
           class="theme-toggle"
           id="themeToggle"
           type="button"
-          aria-label="Toggle dark and light mode"
+          aria-label="Switch theme mode"
           aria-pressed="false"
         >
           <span class="theme-toggle-icon" id="themeToggleIcon" aria-hidden="true">🌙</span>
-          <span class="theme-toggle-text" id="themeToggleText">Dark</span>
         </button>
-      </div>
+      </nav>
     </header>
 
     <main id="top" class="container">
@@ -665,7 +662,7 @@
       <p>© 2026 <span id="footerName">Adarsh Malayath</span></p>
     </footer>
 
-    <script src="/portfolio/script.js?v=20260216v30"></script>
+    <script src="/portfolio/script.js?v=20260216v31"></script>
     <script type="module" src="/portfolio/portfolio-data.js?v=20260216v27"></script>
   </body>
 </html>
