--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       href="/portfolio/brand-icon-180.png?v=20260215v22"
     />
     <link rel="manifest" href="/portfolio/site.webmanifest?v=20260215v22" />
-    <link rel="stylesheet" href="/portfolio/styles.css?v=20260216v35" />
+    <link rel="stylesheet" href="/portfolio/styles.css?v=20260216v36" />
   </head>
   <body data-theme="dark">
     <div class="bg-orb orb-a" aria-hidden="true"></div>
@@ -126,7 +126,20 @@
           aria-label="Switch theme mode"
           aria-pressed="false"
         >
-          <span class="theme-toggle-icon" id="themeToggleIcon" aria-hidden="true">🌙</span>
+          <span class="theme-toggle-track" aria-hidden="true">
+            <span class="theme-stars">
+              <span class="star star-a"></span>
+              <span class="star star-b"></span>
+              <span class="star star-c"></span>
+              <span class="star star-d"></span>
+            </span>
+            <span class="theme-clouds">
+              <span class="cloud cloud-a"></span>
+              <span class="cloud cloud-b"></span>
+              <span class="cloud cloud-c"></span>
+            </span>
+            <span class="theme-toggle-thumb"></span>
+          </span>
         </button>
       </nav>
     </header>
@@ -661,7 +674,7 @@
       <p>© 2026 <span id="footerName">Adarsh Malayath</span></p>
     </footer>
 
-    <script src="/portfolio/script.js?v=20260216v32"></script>
+    <script src="/portfolio/script.js?v=20260216v33"></script>
     <script type="module" src="/portfolio/portfolio-data.js?v=20260216v27"></script>
   </body>
 </html>
